frontend/manifests/cybercrime-frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/force-hsts: 'true'
    ingress.kubernetes.io/hsts-max-age: '315360000'
    ingress.kubernetes.io/hsts-include-subdomains: 'true'
    ingress.kubernetes.io/content-type-nosniff: 'true'
    ingress.kubernetes.io/frame-deny: 'true'
  name: cybercrime-frontend-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: cybercrime-frontend
              servicePort: frontend-port
            path: /
