frontend/manifests/cybercrime-frontend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cybercrime-frontend
  namespace: istio-system
spec:
  hosts:
    - '*'
  gateways:
    - public-gateway.istio-system.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: cybercrime-frontend.cybercrime-frontend.svc.cluster.local
            port:
              number: 3000
